--- a/src/cs/workbench/browser/parts/titlebar/media/titlebar.css
+++ b/src/cs/workbench/browser/parts/titlebar/media/titlebar.css
@@ -3,7 +3,7 @@
   align-items: center;
   background: rgb(var(--bg-page));
   display: flex;
-  height: 38px;
+  height: 35px;
   padding-left: 12px;
   padding-right: 12px;
   -webkit-app-region: drag;
